Spring cleaning, april update

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: page
 title: Dana Paige Seidel
-subtitle: movement ecologist, computational biologist, all around genuine human
+subtitle: <br/> movement ecologist, data lover, R enthusiast <br/>
 use-site-title: true
 ---
 
 <div class="text-center">
   <img src="{{ site.baseurl }}/img/headshot.jpg" />
 </div>
+
 
 <!-- commenting out blog posts for the moment
 <div class="posts-list">
