--- a/MeetUpSlides.html
+++ b/MeetUpSlides.html
@@ -60,7 +60,7 @@
 
   <header class="caption">
     <h1>My Summer @ Rstudio &amp; an intro to the scales pkg</h1>
-    <p></p>
+    <p>Dana Seidel</p>
   </header>
 
   
