interim quick update to website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: page
 title: Dana Paige Seidel
-subtitle: Welcome to my personal website and blog!
 bigimg:
-  - 'img/R.jpg'
+  - 'img/yosemite.jpg'
 use-site-title: true
 ---
 <!-- Typed.js --> 
@@ -24,7 +23,7 @@ use-site-title: true
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#890000";></span></h1>
+          <h1>I write about <span class="typed" style="color:#008485";></span></h1>
       </div>
     </div>
   </div>
