--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Dana Paige Seidel
 bigimg:
-  - 'img/yosemite.jpg'
+  - 'img/plant.jpg'
 use-site-title: true
 ---
 <!-- Typed.js --> 
