update gemfile lock, update tabs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ use-site-title: true
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["academia.", "data visualization.", "R.", "teaching.", "data science."],
+      strings: ["decision science.", "academia.", "R.", "visualization.", "quilting."],
       typeSpeed: 85,
       loop: true,
       backDelay: 1000
@@ -23,7 +23,7 @@ use-site-title: true
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#008485";></span></h1>
+          <h1>Ask me about <span class="typed" style="color:#008485";></span></h1>
       </div>
     </div>
   </div>
